fix a contrast

--- a/src/css/krampstudio.css
+++ b/src/css/krampstudio.css
@@ -163,7 +163,7 @@ main article ul li:before {
 
 footer {
     text-align: center;
-    color: #888;
+    color: #bbb;
 }
 
 
